fix: exclude Linux wheels from PyPI and update installation docs
Root cause: PyPI rejects linux_x86_64 platform tag wheels. AuroraView
requires webkit2gtk system libraries at build time, which are not
available in manylinux Docker containers. Building on host with
'manylinux: off' produces linux_x86_64 wheels that PyPI doesn't accept.

Solution: Distribute Linux wheels via GitHub Releases instead of PyPI.

Changes:
1. Modified release.yml to remove Linux wheels before PyPI upload
2. Updated README.md with Linux-specific installation instructions
3. Updated README_zh.md with Chinese installation instructions

Linux users can:
- Install from GitHub Releases (recommended)
- Build from source with 'pip install --no-binary :all:'

Windows and macOS wheels continue to be published to PyPI normally.

Signed-off-by: Hal Long <hal.long@outlook.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,15 @@ jobs:
           ls -la dist/
           echo "Total files: $(ls -1 dist/ | wc -l)"
 
+      - name: Remove Linux wheels (not accepted by PyPI)
+        run: |
+          # Remove linux_x86_64 wheels as PyPI doesn't accept them
+          # These wheels require webkit2gtk at runtime and use non-standard platform tags
+          # Linux users should install from GitHub Releases or build from source
+          rm -f dist/*-linux_x86_64.whl || true
+          echo "Remaining files for PyPI:"
+          ls -la dist/
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
