--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -17,7 +17,7 @@ inputs:
   maturin-args:
     description: 'Additional arguments for maturin'
     required: false
-    default: '--release --out dist --find-interpreter --features ext-module,abi3-py38'
+    default: '--release --out dist --find-interpreter --features python-bindings,ext-module,abi3-py38'
   test-wheel:
     description: 'Whether to test the built wheel'
     required: false
