--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,7 @@ jobs:
           test-wheel: 'true'
           upload-wheel: 'true'
           artifact-name: 'wheels-${{ matrix.os }}'
-          maturin-args: ${{ matrix.os == 'windows-latest' && '--release --out dist --find-interpreter --features ext-module,abi3-py38,win-webview2' || '--release --out dist --find-interpreter --features ext-module,abi3-py38' }}
+          maturin-args: ${{ matrix.os == 'windows-latest' && '--release --out dist --find-interpreter --features python-bindings,ext-module,abi3-py38,win-webview2' || '--release --out dist --find-interpreter --features python-bindings,ext-module,abi3-py38' }}
 
   # CLI builds for all platforms
   cli-builds:
