--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -38,15 +38,15 @@ jobs:
           - os: ubuntu-latest
             target: x86_64
             artifact-name: wheels-linux-x86_64
-            maturin-args: '--release --out dist --find-interpreter --features ext-module,abi3-py38'
+            maturin-args: '--release --out dist --find-interpreter --features python-bindings,ext-module,abi3-py38'
           - os: windows-latest
             target: x64
             artifact-name: wheels-windows-x64
-            maturin-args: '--release --out dist --find-interpreter --features ext-module,abi3-py38,win-webview2'
+            maturin-args: '--release --out dist --find-interpreter --features python-bindings,ext-module,abi3-py38,win-webview2'
           - os: macos-latest
             target: universal2-apple-darwin
             artifact-name: wheels-macos-universal2-apple-darwin
-            maturin-args: '--release --out dist --sdist --find-interpreter --features ext-module,abi3-py38'
+            maturin-args: '--release --out dist --sdist --find-interpreter --features python-bindings,ext-module,abi3-py38'
     steps:
       - uses: actions/checkout@v6
 
